# FruitCut

./: .gitignore  readme.md  requirements.txt
detector/: Config.py  Game.py
detector/c_wrapper/: CMakeLists.txt  CMakePresets.json
detector/c_wrapper/moving_average/: MovingAverage.cpp  MovingAverage.h
detector/c_wrapper/moving_average_history/: MovingAverageHistory.cpp  MovingAverageHistory.h
detector/c_wrapper/numpy_converter/: ndarray_converter.cpp  ndarray_converter.h
detector/computer_vision/: BGS.py  Cam.py
detector/game/: Config.py  Entity.py  Utils.py
